2008-12-03  Cosimo Cecchi  <cosimoc@gnome.org>

	* libgdict/gdict-database-chooser.c:
	* libgdict/gdict-database-chooser.h:
	* libgdict/gdict-defbox.c:
	* libgdict/gdict-defbox.h:
	* libgdict/gdict-private.h:
	* libgdict/gdict-source-chooser.c:
	* libgdict/gdict-source-chooser.h:
	* libgdict/gdict-speller.c:
	* libgdict/gdict-speller.h:
	* libgdict/gdict-strategy-chooser.c:
	* libgdict/gdict-strategy-chooser.h:
	* libgdict/gdict-utils.h:
	* src/gdict-aligned-window.c:
	* src/gdict-aligned-window.h:
	* src/gdict-app.c:
	* src/gdict-sidebar.c:
	* src/gdict-sidebar.h:
	* src/gdict-window.c:
	Use single GTK+ includes. Patch by Maxim Ermilov (#561257).

2008-11-04  Cosimo Cecchi  <cosimoc@gnome.org>

	* src/gdict-app.c: (gdict_app_finalize), (gdict_init):
	* src/gdict-app.h:
	* src/gdict-pref-dialog.c: (response_cb):
	* src/gdict-source-dialog.c: (gdict_source_dialog_response_cb):
	* src/gdict-window.c: (gdict_window_cmd_help_contents):
	Drop libgnome/libgnomeui dependency (part of #557262).

2008-11-03  Emmanuele Bassi  <ebassi@gnome.org>

	Bug 558980 – gnome-dictionary desktop file hardcodes icon extension

	* data/gnome-dictionary.desktop.in.in: Do not use the extension of
	the icon in the desktop file. (Olivier Blin)

2008-09-11  Emmanuele Bassi  <ebassi@gnome.org>

	Bug 551784 – dict applet still uses deprecated gnome-stock-about icon
	instead of gtk-about

	* data/GNOME_DictionaryApplet.xml: Use gtk-about instead of
	gnome-stock-about, which has been long since deprecated. (Pacho
	Ramos)

2008-08-11  Emmanuele Bassi  <ebassi@gnome.org>

	* src/gdict-window.c (gdict_window_ensure_menu_state): Fix a warning
	when ensure_state() is being called without a UIManager or
	without the full menu built.

2008-08-11  Emmanuele Bassi  <ebassi@gnome.org>

	Bug 547300 – links are yellow

	* libgdict/gdict-defbox.c:
	(gdict_defbox_init_tags): Do not use a pointer to a
	GdkColor pointer, unless you want garbage to be used
	as a color. (Benjamin Berg, Andreas Nilsson)
