@@ -1,3 +1,10 @@
+2008-12-15  Cosimo Cecchi  <cosimoc@gnome.org>
+
+	* src/gdict-applet.c: (gdict_applet_cmd_help),
+	(gdict_applet_factory), (main):
+	Remove libgnome dependency and use stock PANEL_APPLET_BONOBO_FACTORY
+	macro to initialize applet (#563970).
+
 2008-12-03  Cosimo Cecchi  <cosimoc@gnome.org>
 
 	* libgdict/gdict-database-chooser.c:
